# CVCandy

./: README.md  pyproject.toml
cvcandy/: __init__.py
cvcandy/segmentation/: __init__.py  metrics.py
cvcandy/universal/: __init__.py  metric.py
